--- a/applications/Nima/app/src/main/res/layout/fragment_main.xml
+++ b/applications/Nima/app/src/main/res/layout/fragment_main.xml
@@ -6,19 +6,18 @@
     android:layout_height="match_parent"
     tools:context="com.superb20.nima.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/fragment_photo_gallery_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </android.support.v7.widget.RecyclerView>
 
     <Button
-        android:id="@+id/btn_album"
+        android:id="@+id/btn_load_images"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button" />
-
+        android:layout_height="51dp"
+        android:text="Load images"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 </android.support.constraint.ConstraintLayout>
